[gd_scene load_steps=6 format=2]

[ext_resource path="res://Other/Title.gd" type="Script" id=1]
[ext_resource path="res://Sprites/background_menu.jpg" type="Texture" id=2]
[ext_resource path="res://Other/Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Other/Font_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://Other/Font_Extra_small.tres" type="DynamicFont" id=5]

[node name="Title" type="Node"]
script = ExtResource( 1 )

[node name="background_menu" type="Sprite" parent="."]
position = Vector2( 160.083, 85.0563 )
scale = Vector2( 0.238492, 0.238492 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 98.6895
margin_top = 62.837
margin_right = 219.689
margin_bottom = 97.837
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 12.9428
margin_top = 33.837
margin_right = 304.943
margin_bottom = 62.837
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "CARGO SPACE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 123.298
margin_top = 153.811
margin_right = 197.298
margin_bottom = 177.811
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 98.6895
margin_top = 100.508
margin_right = 219.689
margin_bottom = 124.508
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "How to Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 94.0186
margin_top = 128.175
margin_right = 226.019
margin_bottom = 152.175
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
